--- a/openai-chatgpt/package.json
+++ b/openai-chatgpt/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "node-fetch": "^3.3.1",
     "openai": "^3.2.1",
     "readline-sync": "^1.4.10"
   }
