--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,14 @@
       {
         "label": "off"
       }
+    ],
+    "typescript-config/consistent-casing": "off",
+    "typescript-config/strict": "off",
+    "axe/language": [
+      "default",
+      {
+        "html-has-lang": "off"
+      }
     ]
   }
 }
